--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
         default: false
         required: false
   schedule:
-    - cron: '42 13 * * *'
+    - cron: '0 14 * * 1'
 
 env:
   DOCKER_BUILDKIT: 1
